Fix align for screen overlapping bug

--- a/src/modules/robot/components/RobotGrid/RobotGrid.module.css
+++ b/src/modules/robot/components/RobotGrid/RobotGrid.module.css
@@ -1,8 +1,8 @@
 .robot_grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 270px);
+  grid-template-columns: repeat(auto-fill, 280px);
   grid-gap: 30px;
-  width: 90%;
+  width: 80%;
 }
 
 .robot {
